--- a/css/search-bar.css
+++ b/css/search-bar.css
@@ -1,6 +1,6 @@
 .search-bar {
   padding: 10px 25px;
-  position: relative;
+  width:100%
 }
 
 .search-bar input{
@@ -16,10 +16,4 @@
 
 .search-bar input:focus{
   outline: none;
-}
-.search-bar i{
-  position: absolute;
-  top: 15px;
-  left: 170px;
-  color: #bbbbbb;
 }
