--- a/css/chats.css
+++ b/css/chats.css
@@ -62,4 +62,11 @@
   font-size: 23px;
   color: #523737;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  cursor : pointer;
+  transition: color .3s , background .3s ease-in-out;
+}
+
+.chat-btn:hover {
+  color: white;
+  background-color: #523737;
 }
