채널에 이미지를 변경해주었습니다.
채널에 이미지를 변경해주었고 여러 부분에 사이즈 및 위치를 조절해줬습니다.

--- a/css/friends.css
+++ b/css/friends.css
@@ -24,6 +24,11 @@
   color: inherit;
 }
 
+.friends__section-rows i {
+  color: darkgreen;
+  align-items: center;
+}
+
 .friends__section-column {
   display: flex;
   align-items: center;
